--- a/jj-site/config.toml
+++ b/jj-site/config.toml
@@ -1,9 +1,13 @@
-baseURL = "https://yourwebsite.github.io/"  # Replace with your actual GitHub Pages URL
-title = "The Legacy of Textile Mills"
+baseURL = "http://localhost:1313/"
+ # Replace with your actual GitHub Pages URL
+
+title = "Jen M Jones"
 theme = "PaperMod"
 languageCode = "en-us"
-paginate = 5  # Number of posts per page
 enableGitInfo = true  # Tracks last modified date of files
+
+[pagination] 
+pagerSize = 5
 
 [params]
 author = "Jen Jones"
@@ -11,6 +15,15 @@ description = "Exploring the rise and impact of textile mills."
 showReadingTime = true
 showToc = true  # Enables Table of Contents for posts
 defaultTheme = "light"  # Options: light/dark/auto
+disableThemeToggle = true
+enableCover = true
+cover = "imgages/banner.jpg"
+coverSize = "full"
+
+
+
+
+
 
 [[menu.main]]
 name = "Home"
@@ -26,3 +39,14 @@ weight = 2
 name = "About"
 url = "/about/"
 weight = 3
+
+[[menu.main]]
+name = "CV"
+url = "/CV/"
+weight = 4
+
+
+[[menu.main]]
+  name = "Research Projects"
+  url = "/research/"
+  weight = 5
