--- a/jj-site/config.toml
+++ b/jj-site/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313/" # Replace with your actual GitHub Pages URL
+baseURL = "http://jenmjones.com/" # Replace with your actual GitHub Pages URL
 
 title = "Jen M Jones"
 theme = "PaperMod"
