--- a/jj-site/config.toml
+++ b/jj-site/config.toml
@@ -44,20 +44,20 @@ weight = 1
 
 [[menu.main]]
 name = "Blog"
-url = "/blog.html"
+url = "https://jenmjones.github.io/portfolio/jj-site/blog.html"
 weight = 2
 
 [[menu.main]]
 name = "About"
-url = "/about.html"
+url = "https://jenmjones.github.io/portfolio/jj-site/about.html"
 weight = 3
 
 [[menu.main]]
 name = "CV"
-url = "/cv.html"
+url = "https://jenmjones.github.io/portfolio/jj-site/CV.html"
 weight = 4
 
 [[menu.main]]
 name = "Research Projects"
-url = "/research.html"
+url = "https://jenmjones.github.io/portfolio/jj-site/research.html"
 weight = 5
